ADD: main webrtc logic + user interface

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
+<!--main html for the angular app, in runtime will be routed to the actual componenet that we want to show (app.component.html)-->
 <!doctype html>
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
-  <title>WebrtcVideoChat</title>
+  <title>Video chat app - itamar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--  scripts included in the angular.json file-->
+
 </head>
 <body>
-  <app-root></app-root>
+<!--routing to the selected component-->
+<app-root></app-root>
 </body>
 </html>
